--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"react": "^17.0.1",
 		"react-copy-to-clipboard": "^5.0.3",
 		"react-dom": "^17.0.1",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^4.0.3",
 		"simple-peer": "^9.10.0",
 		"socket.io-client": "^4.0.0",
 		"start": "^5.1.0",
